# inclusive-D0-UPC

./: .gitignore  CMakeLists.txt  README.md  b_integral.html  b_integral.ipynb  cross_section.ipynb  cross_section.py  run_Pb.sh  run_lhapdf_members.sh  run_lhapdf_members_oberon.sh  run_local.sh  run_many_Pb.sh  run_many_Puhti_lappi.sbatch  run_many_oberon.sh
FragFunc/: plot_ff.py
data/prompt-D0-1-109/: prompt-D0-1-109.info
src/: CMakeLists.txt  amplitudelib.cpp  amplitudelib.hpp  def.hpp  fragmentation.cpp  fragmentation.hpp  function.cpp  gamma_aa.cpp  gamma_aa.hpp  inclusive_spectrum.cpp  integral_D0.cpp  integral_parton.cpp  lhapdf_grid.cpp  lhapdf_grid.hpp  main.cpp  tools.cpp  tools.hpp
